--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,4 @@ language: java
 jdk:
   -openjdk11
 script:
-  -mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-  -mvn test -B ./PriorityQueueTest.java
+  -java test ./PriorityQueueTest.java
